# python-gdp-demo

./: README.md  main.py  pyproject.toml
src/econ_report/: cli.py  io.py  reports.py
tests/: test_average_gdp.py  test_cli.py
