[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-report"
version = "0.1.0"
description = "CLI tool to build economic reports from CSV datasets"
requires-python = ">=3.10"
dependencies = [
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["econ_report"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.setuptools]
package-dir = {"" = "src"}
